--- a/page21.html
+++ b/page21.html
@@ -152,6 +152,7 @@
         right: 0;
         bottom: 0;
         left: 0;
+        background-repeat: no-repeat;
       }
       .arrows-container {
         position: absolute;
@@ -201,11 +202,11 @@
         data-imageurl="images/page21.svg"
       >
         <div class="arrows-container">
-          <a class="arrow-next-container controls" href="page22.html">
+          <a class="arrow-next-container controls" href="/">
             <img
               alt="Next page"
               class="arrow-next-image"
-              src="images/next.gif"
+              src="images/reset.gif"
             />
           </a>
           <a class="arrow-back-container controls" href="page20.html">
