--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background-size: contain;
-        outline: 1px solid red;
+        background-repeat: no-repeat;
       }
     </style>
   </head>
