--- a/page12.html
+++ b/page12.html
@@ -152,6 +152,7 @@
         right: 0;
         bottom: 0;
         left: 0;
+        background-repeat: no-repeat;
       }
       .arrows-container {
         position: absolute;
