--- a/page20.html
+++ b/page20.html
@@ -152,6 +152,7 @@
         right: 0;
         bottom: 0;
         left: 0;
+        background-repeat: no-repeat;
       }
 
       .arrows-container {
@@ -166,7 +167,7 @@
         padding: 0 20px;
       }
       .arrows-container img {
-        width: 18%;
+        width: 30%;
       }
       .arrow-next-container {
         text-align: left;
@@ -215,30 +216,51 @@
         background-image: url(images/play_button.gif);
         background-size: contain;
       }
+      @media screen and (max-width: 600px) {
+        #play_button {
+          width: 100px;
+          height: 100px;
+        }
+      }
+      .controls {
+        display: none;
+      }
     </style>
   </head>
   <body>
     <div id="container">
       <div
         id="box"
-        style="display: none; background-image: url('images/page20.svg')"
+        style="display: none; background-image: url('images/page6.svg')"
+        data-imageurl="images/page6.svg"
       >
-        <video autoplay controls width="100%" height="100%" id="video_player">
-          <source src="videos/page8.mp4" />
+        <video
+          autoplay
+          controls
+          width="100%"
+          height="100%"
+          id="video_player"
+          class="controls"
+        >
+          <source src="videos/page2.mp4" />
           Sorry, your browser doesn't support embedded videos.
         </video>
 
-        <button id="play_button" onclick="startVideo()"></button>
+        <button
+          id="play_button"
+          onclick="startVideo()"
+          class="controls"
+        ></button>
 
         <div class="arrows-container">
-          <a class="arrow-next-container" href="page21.html">
+          <a class="arrow-next-container controls" href="page7.html">
             <img
               alt="Next page"
               class="arrow-next-image"
               src="images/next.gif"
             />
           </a>
-          <a class="arrow-back-container" href="page19.html">
+          <a class="arrow-back-container controls" href="page5.html">
             <img
               alt="Previous page"
               class="arrow-back-image"
@@ -247,13 +269,13 @@
           </a>
         </div>
 
-        <a href="index.html" class="home">
+        <a href="index.html" class="home controls">
           <img src="images/home.gif" alt="Homepage" class="home-image" />
         </a>
       </div>
     </div>
     <script>
-      const aspectRatio = 0.75;
+      const aspectRatio = 810 / 1010;
       const calculate = (width, height) => {
         let newHeight = height;
         let newWidth = height * aspectRatio;
@@ -273,6 +295,31 @@
         document.getElementById("play_button").style.display = "none";
         document.getElementById("video_player").play();
       }
+      function showControls() {
+        Array.from(document.getElementsByClassName("controls")).forEach(
+          (el) => {
+            el.style.display = "block";
+          }
+        );
+      }
+      function waitForImage() {
+        const url = document
+          .getElementById("box")
+          .getAttribute("data-imageurl");
+
+        const img = new Image();
+        img.onload = function () {
+          showControls();
+        };
+        img.onerror = function () {
+          console.error("Failed loading main image");
+          showControls();
+        };
+        img.src = url;
+        if (img.complete) {
+          img.onload();
+        }
+      }
       function main() {
         const size = calculate(window.innerWidth, window.innerHeight);
         const box = document.getElementById("box");
@@ -281,10 +328,13 @@
         box.style.display = "block";
 
         const video = document.getElementById("video_player");
-        const video_width = size.width * 0.9;
+        const video_width = size.width * 0.95;
         video.style.width = video_width + "px";
         video.style.height = video_width + "px";
-        video.style.display = "block";
+        video.onplay = () => {
+          document.getElementById("play_button").style.display = "none";
+        };
+        waitForImage();
       }
       document.addEventListener("DOMContentLoaded", main, false);
       window.onresize = main;
