--- a/page21.html
+++ b/page21.html
@@ -207,6 +207,7 @@
               alt="Next page"
               class="arrow-next-image"
               src="images/reset.gif"
+              style="width: 50px"
             />
           </a>
           <a class="arrow-back-container controls" href="page20.html">
