--- a/page21.html
+++ b/page21.html
@@ -202,7 +202,7 @@
         data-imageurl="images/page21.svg"
       >
         <div class="arrows-container">
-          <a class="arrow-next-container controls" href="/">
+          <a class="arrow-next-container controls" href="index.html">
             <img
               alt="Next page"
               class="arrow-next-image"
